Added icon fa-bars

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
       <!-- main nav toggler (show/hide) -->
       <a class="toggle-nav btn pull-left" href="#">
-        <i class="fa-reorder"></i>
+        <i class="fa fa-bars"></i>
       </a>
 
       <!-- dropdowns -->
@@ -50,8 +50,7 @@
         <!-- medium dropdown & widget -->
         <li class="dropdown medium only-icon widget">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            <%= image_tag "avatar.jpg", size: "23x23", alt: "Mila Kunis" %>
-            <span class="user-name">Mila Kunis</span>
+            <span class="user-name">5</span>
             <b class="caret"></b>
             <!-- ... -->
           </a>
@@ -60,7 +59,6 @@
               <div>test</div>
             </li>
           </ul>
-
           <!-- ... -->
         </li>
 
