Started working on schools

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,6 @@
 @import 'flatty/theme-colors';
 //$contrast: pink;
 
-//@import 'flatty/light-theme';
-@import 'flatty/dark-theme';
+@import 'flatty/light-theme';
+//@import 'flatty/dark-theme';
 //@import 'flatty/dark-blue-theme';
