--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <!-- your & Flatty stylesheets -->
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-
+  <%= csrf_meta_tags %>
   <!-- if you are going to support IE8 you must include these files -->
   <!--[if lt IE 9]>
   <script src='assets/javascripts/ie/html5shiv.js' type='text/javascript'></script>
@@ -105,13 +105,20 @@
         <!-- navigation items -->
         <%= flatty_navigation do %>
           <!-- single navigation item -->
-          <%= flatty_navigation_item admin_welcome_Index_path, "Dashboard", "fa-dashboard" %>
+          <%= flatty_navigation_item admin_welcome_index_path, "Dashboard", "fa-dashboard" %>
 
-          <%= flatty_navigation_drop_down("Schools", "fa-graduation-cap") do %>
-            <%= flatty_navigation_item admin_schools_Index_path, "Overview", "fa-bar-chart-o" %>
-            <%= flatty_navigation_item admin_schools_List_path, "List", "fa-list" %>
-            <%= flatty_navigation_item admin_schools_Create_path, "Create", "fa-plus" %>
-            <%= flatty_navigation_item admin_schools_Settings_path, "Settings", "fa-cog" %>
+          <%= flatty_navigation_drop_down 'Accounts', 'fa-users' do %>
+            <%= flatty_navigation_item overview_admin_accounts_path, 'Overview', 'fa-bar-chart-o'%>
+            <%= flatty_navigation_item admin_accounts_path, 'List', 'fa-list'%>
+            <%= flatty_navigation_item new_admin_account_path, 'Create', 'fa-plus'%>
+            <%= flatty_navigation_item settings_admin_accounts_path, 'Settings', 'fa-cog'%>
+          <% end %>
+
+          <%= flatty_navigation_drop_down "Schools", "fa-graduation-cap" do %>
+            <%= flatty_navigation_item overview_admin_schools_path, 'Overview', 'fa-bar-chart-o' %>
+            <%= flatty_navigation_item admin_schools_path, 'List', 'fa-list' %>
+            <%= flatty_navigation_item new_admin_school_path, 'Create', 'fa-plus' %>
+            <%= flatty_navigation_item settings_admin_schools_path, 'Settings', 'fa-cog' %>
           <% end #End Navigation drop down%>
         <% end #End Navigation %>
 
@@ -119,6 +126,9 @@
     </nav>
     <section id="content">
       <div class="container">
+        <% flash.each do |name, msg| %>
+            <%= flatty_alert name, msg %>
+        <% end %>
         <div class="row" id="content-wrapper">
           <div class="col-xs-12">
             <%= yield %>
