--- a/app/views/admin/schools/new.html.erb
+++ b/app/views/admin/schools/new.html.erb
@@ -1,5 +1,11 @@
-<%= form_for @school, url: {action: "Create"} do |form|%>
-    <%= form.text_field :Name %>
-    <%= form.text_area :Description, size: "60x12" %>
-    <%= form.submit "Create" %>
+<%= form_for @school, url: {action: "create"} do |form|%>
+    <p>
+      <%= form.text_field :name %>
+    </p>
+    <p>
+      <%= form.text_area :description, size: "60x12" %>
+    </p>
+    <p>
+      <%= form.submit "Create" %>
+    </p>
 <% end %>
