Completed Schools controller and views. Some Schools migration changes Configuration changes

--- a/app/views/admin/accounts/edit.html.erb
+++ b/app/views/admin/accounts/edit.html.erb
@@ -11,11 +11,11 @@
         </ul>
     <% end %>
     <p>
-        <%= form.label :email %>
+        <%= form.label :email %><br/>
         <%= form.text_field :email %>
     </p>
     <p>
-      <%= form.label :password %>
+      <%= form.label :password %><br/>
       <%= form.password_field :password %>
     </p>
 
