--- a/app/views/admin/schools/edit.html.erb
+++ b/app/views/admin/schools/edit.html.erb
@@ -11,11 +11,11 @@
         </ul>
     <% end %>
     <p>
-        <%= form.label :name %>
+        <%= form.label :name %><br/>
       <%= form.text_field :name %>
     </p>
    <p>
-     <%= form.label :description %>
+     <%= form.label :description %><br/>
      <%= form.text_field :description %>
    </p>
 
