--- a/app/views/admin/schools/new.html.erb
+++ b/app/views/admin/schools/new.html.erb
@@ -1,8 +1,12 @@
+<h1>School: new</h1>
+
 <%= form_for @school, url: {action: "create"} do |form|%>
     <p>
+      <%= form.label :name %><br/>
       <%= form.text_field :name %>
     </p>
     <p>
+      <%= form.label :description %><br/>
       <%= form.text_area :description, size: "60x12" %>
     </p>
     <p>
