--- a/app/views/admin/accounts/index.html.erb
+++ b/app/views/admin/accounts/index.html.erb
@@ -2,8 +2,17 @@
 
 <% @users.each do |user| %>
     <h2><%= link_to user.email, admin_account_path(user) %>
+      <% if user.student != nil then %>
+          <small>Is school</small>
+          <small><%= link_to 'Schools', schools_admin_account_path(user) %></small>
+      <% elsif user.school != nil then %>
+          <small>Is school</small>
+      <% else %>
+          <small>Account Type Unknown</small>
+      <% end %>
       <small><%= link_to 'Edit', edit_admin_account_path(user) %></small>
-      <small><%= link_to 'Delete', admin_account_path(user), method: :delete %></small></h2>
-      <small><%= link_to 'Schools', schools_admin_account_path(user) %></small></h2>
+      <small><%= link_to 'Delete', admin_account_path(user), method: :delete %></small>
+    </h2>
     <p><%= user.password %></p>
 <% end %>
+
