--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <!-- your & Flatty stylesheets -->
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= yield(:head) %>
   <%= csrf_meta_tags %>
   <!-- if you are going to support IE8 you must include these files -->
   <!--[if lt IE 9]>
